--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^16.11.6",
+    "@types/typescript": "^2.0.0",
     "eslint": "7",
-    "eslint-config-next": "12.0.1"
+    "eslint-config-next": "12.0.1",
+    "typescript": "^4.4.4"
   }
 }
